terraform/src/main/k8s-deployment/Istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: eouil-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "api.eouil.com"
      tls:
        mode: SIMPLE
        credentialName: eouil-tls-secret
